--- a/doore/WebContent/WEB-INF/web.xml
+++ b/doore/WebContent/WEB-INF/web.xml
@@ -13,6 +13,6 @@
   </servlet-mapping>
   
   <welcome-file-list>
-    <welcome-file>시작페이지 지정</welcome-file>
+    <welcome-file>action/start</welcome-file>
   </welcome-file-list>
 </web-app>
